# slid

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  slurm-8100680_1.out
results/: inkscape.csv  veloren.csv
scripts/: allocation.sh  optimize.example.sh  pip-freeze.sh  run.example.sh  run.sh
src/: hf_login.py
src/slid/modeling/: evaluate.py  hp_search.py  optimize.py  run.py
src/slid/preprocessing/: log.py
src/slid/utils/: utils.py
